--- a/index.html
+++ b/index.html
@@ -6,10 +6,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&family=Teko&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-section">
+        <div class="half-width">
+            <h1>FASTEST <span class="coloring-word">DELIVERY</span> & EASY PICKUP</h1>
+            <h3>when you're too lazy to cook, we're <br> just one click away</h3>
+            <br>
+            <br>
+            <a class="link-button" href="https://www.facebook.com/itzirfanjamil/" target="_blank">Order Now</a>
+        </div>
+        <div class="top-picture">
+            <img src="images/female/use..png" alt="">
+        </div>
+    </section>
+    <section class="about-me">
+        <div class="half-width">
+            <img src="images/female/38-387173_supplement-nutrient-dietary-eating-food-free-download-nutrition-removebg-preview.png"
+                alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Me</h1>
+            <h3>I love to cook, but I haven’t always. In fact, for most of my early adult life, cooking dinner usually
+                meant microwaving a frozen dinner or adding boiling water to something that came from a box. It wasn’t
+                until I got married that I started eating real food because I married a guy who cooks. </h3>
+            <br>
+            <br>
+            <a class="link-button" href="https://www.facebook.com/itzirfanjamil/">Contact Me</a>
+        </div>
+    </section>
+
+    <section class="recipie-section">
+        <div class="my-recipie">
+            <h1>My Recipies</h1>
+            <p>A side of salmon, hot off the grill and laid on fig leaves from a backyard tree if you have one, makes a
+                spectacular main course.A side of salmon, hot off the grill and laid on fig leaves from a backyard tree
+                if you have one, makes a spectacular main course. If you're daunted by the prospect of flipping such a
+                large piece of fish, cut it into three sections before grilling (they're easier to turn) and arrange
+                them end to end on the platter. Erin Scott, creator of the blog (and cookbook) Yummy Supper, gave us
+                this recipe.
+            </p>
+        </div>
+        <div class="all-recipie">
+            <div>
+                <h2>Spatchcock Chicken</h2>
+                <p>Roast until skin is crisp and an instant-read thermometer inserted into thickest part of breast reads
+                    165 degrees F, about 35 minutes. Let stand 5 minutes before cutting each chicken into 8 pieces.</p>
+            </div>
+            <div>
+                <h2>Lasagna Flatbread</h2>
+                <p>Spread 1/6 of the cheese mixture evenly on each flatbread; cover with sausage mixture. Top with
+                    remaining mozzarella cheese.
+                    Bake in the preheated oven until cheese is melted and bubbly, 10 to 15 minutes.</p>
+            </div>
+            <div>
+                <h2>Klupskies (Polish Burgers)</h2>
+                <p>Spray a large skillet with olive oil cooking spray and set over medium heat. Cook the burgers until
+                    well-browned on the bottoms, about 10 minutes; flip the burgers and cook until the meat is no longer
+                    pink and the juices run clear, 8 to 10 more minutes.</p>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
