--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-section">
+    <section class="top-section flexible-container">
         <div class="half-width">
             <h1>FASTEST <span class="coloring-word">DELIVERY</span> & EASY PICKUP</h1>
             <h3>when you're too lazy to cook, we're <br> just one click away</h3>
@@ -26,7 +26,7 @@
             <img src="images/female/use..png" alt="">
         </div>
     </section>
-    <section class="about-me">
+    <section class="about-me flexible-container">
         <div class="half-width">
             <img src="images/female/38-387173_supplement-nutrient-dietary-eating-food-free-download-nutrition-removebg-preview.png"
                 alt="">
@@ -47,32 +47,63 @@
             <h1>My Recipies</h1>
             <p>A side of salmon, hot off the grill and laid on fig leaves from a backyard tree if you have one, makes a
                 spectacular main course.A side of salmon, hot off the grill and laid on fig leaves from a backyard tree
-                if you have one, makes a spectacular main course. If you're daunted by the prospect of flipping such a
-                large piece of fish, cut it into three sections before grilling (they're easier to turn) and arrange
-                them end to end on the platter. Erin Scott, creator of the blog (and cookbook) Yummy Supper, gave us
-                this recipe.
+                if you have one, makes a spectacular main course.
             </p>
         </div>
-        <div class="all-recipie">
-            <div>
+        <div class="flexible-container">
+            <div id="chicken" class="all-recipie">
                 <h2>Spatchcock Chicken</h2>
-                <p>Roast until skin is crisp and an instant-read thermometer inserted into thickest part of breast reads
+                <p>Roast until skin is crisp and an instant-read thermometer part of breast reads
                     165 degrees F, about 35 minutes. Let stand 5 minutes before cutting each chicken into 8 pieces.</p>
             </div>
-            <div>
+            <div id="flatbread" class="all-recipie">
                 <h2>Lasagna Flatbread</h2>
-                <p>Spread 1/6 of the cheese mixture evenly on each flatbread; cover with sausage mixture. Top with
-                    remaining mozzarella cheese.
+                <p>cover with sausage mixture. Top with remaining mozzarella cheese.
                     Bake in the preheated oven until cheese is melted and bubbly, 10 to 15 minutes.</p>
             </div>
-            <div>
+            <div id="burger" class="all-recipie">
                 <h2>Klupskies (Polish Burgers)</h2>
-                <p>Spray a large skillet with olive oil cooking spray and set over medium heat. Cook the burgers until
-                    well-browned on the bottoms, about 10 minutes; flip the burgers and cook until the meat is no longer
+                <p>Spray a large skillet with olive oil cooking spray and set over medium heat. Flip the burgers and
+                    cook until the meat is no longer
                     pink and the juices run clear, 8 to 10 more minutes.</p>
             </div>
         </div>
+
+        <div class="flexible-container influence">
+            <div class="youtube">
+                <h1>800k</h1>
+                <p>Youtube Subscribers</p>
+
+            </div>
+            <div class="insta">
+                <h1>3.4M</h1>
+                <p>Instagram Followers</p>
+
+            </div>
+            <div class="dribble">
+                <h1>150k</h1>
+                <p>Dribble Shot Likes</p>
+
+            </div>
+
+
+
+
+        </div>
+
     </section>
+
+
+
+    <footer>
+        <div class="last-sec">
+            <h2> MY <span class="green-color">Online</span> Meal</h2>
+            Eat healthy to live healthy. Live healthy to live happy.
+        </div>
+
+
+    </footer>
+
 
 
 </body>
