--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 until I got married that I started eating real food because I married a guy who cooks. </h3>
             <br>
             <br>
-            <a class="link-button" href="https://www.facebook.com/itzirfanjamil/">Contact Me</a>
+            <a class="link-button" href="https://www.facebook.com/itzirfanjamil/" target="_blank">Contact Me</a>
         </div>
     </section>
 
@@ -52,21 +52,23 @@
             </p>
         </div>
         <div class="flexible-container">
-            <div id="chicken" class="all-recipie">
-                <h2>Spatchcock Chicken</h2>
-                <p>Roast until skin is crisp and an instant-read thermometer part of breast reads
-                    165 degrees F, about 35 minutes. Let stand 5 minutes before cutting each chicken into 8 pieces.</p>
+            <div class="box">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Spatchcock Chicken</h3>
+                <p>Roast until skin is crisp and an instant-read thermometer part of breast reads 165 degrees F, about
+                    35 minutes. Let stand 5 minutes before cutting each chicken into 8 pieces.</p>
             </div>
-            <div id="flatbread" class="all-recipie">
-                <h2>Lasagna Flatbread</h2>
-                <p>cover with sausage mixture. Top with remaining mozzarella cheese.
-                    Bake in the preheated oven until cheese is melted and bubbly, 10 to 15 minutes.</p>
+            <div class="box">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Lasagna Flatbread</h3>
+                <p>Roast until skin is crisp and an instant-read thermometer part of breast reads 165 degrees F, about
+                    35 minutes. Let stand 5 minutes before cutting each chicken into 8 pieces.</p>
             </div>
-            <div id="burger" class="all-recipie">
-                <h2>Klupskies (Polish Burgers)</h2>
+            <div class="box">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Klupskies (Polish Burgers)</h3>
                 <p>Spray a large skillet with olive oil cooking spray and set over medium heat. Flip the burgers and
-                    cook until the meat is no longer
-                    pink and the juices run clear, 8 to 10 more minutes.</p>
+                    cook until the meat is no longer pink and the juices run clear, 8 to 10 more minutes.</p>
             </div>
         </div>
 
@@ -84,22 +86,14 @@
             <div class="dribble">
                 <h1>150k</h1>
                 <p>Dribble Shot Likes</p>
-
             </div>
-
-
-
-
         </div>
-
     </section>
-
-
 
     <footer>
         <div class="last-sec">
             <h2> MY <span class="green-color">Online</span> Meal</h2>
-            Eat healthy to live healthy. Live healthy to live happy.
+            "Laughter is brightest where food is best" - Irish Proverb.
         </div>
 
 
