--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     35 minutes. Let stand 5 minutes before cutting each chicken into 8 pieces.</p>
             </div>
             <div class="box">
-                <img src="images/food/Project Cover1.jpg" alt="">
+                <img src="images/food/project cover 1.jpg" alt="">
                 <h3>Lasagna Flatbread</h3>
                 <p>Roast until skin is crisp and an instant-read thermometer part of breast reads 165 degrees F, about
                     35 minutes. Let stand 5 minutes before cutting each chicken into 8 pieces.</p>
